build/log/idf_py_stderr_output_11854
Command: make -j 6 flash
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp: In function 'void setup_timer_ledc(long long unsigned int, short int, short int)':
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:22:29: error: invalid conversion from 'short int' to 'ledc_timer_t' [-fpermissive]
   22 |         .timer_num        = timer,
      |                             ^~~~~
      |                             |
      |                             short int
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:25:5: warning: missing initializer for member 'ledc_timer_config_t::deconfigure' [-Wmissing-field-initializers]
   25 |     };
      |     ^
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:27:27: error: narrowing conversion of 'bit_mask' from 'long long unsigned int' to 'int' [-Werror=narrowing]
   27 |         .gpio_num       = bit_mask,
      |                           ^~~~~~~~
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:29:27: error: invalid conversion from 'short int' to 'ledc_channel_t' [-fpermissive]
   29 |         .channel        = channel,
      |                           ^~~~~~~
      |                           |
      |                           short int
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:34:5: warning: missing initializer for member 'ledc_channel_config_t::sleep_mode' [-Wmissing-field-initializers]
   34 |     };
      |     ^
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:34:5: warning: missing initializer for member 'ledc_channel_config_t::flags' [-Wmissing-field-initializers]
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp: In function 'void pin_configuration()':
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:67:21: error: too few arguments to function 'void setup_timer_ledc(long long unsigned int, short int, short int)'
   67 |     setup_timer_ledc(OUTPUT_ESQUERDO_FRENTE);
      |     ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:17:6: note: declared here
   17 | void setup_timer_ledc(unsigned long long bit_mask, short timer,short channel){
      |      ^~~~~~~~~~~~~~~~
cc1plus: some warnings being treated as errors
make[3]: *** [esp-idf/PinConfig/CMakeFiles/__idf_PinConfig.dir/build.make:76: esp-idf/PinConfig/CMakeFiles/__idf_PinConfig.dir/PinConfig.cpp.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5813: esp-idf/PinConfig/CMakeFiles/__idf_PinConfig.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2502: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:286: flash] Error 2
